syntax = "proto3";
package errorcode;

import "errorcode/enum.proto";
import "utils/patch/go.proto";

option java_package = "xyz.hoper.protobuf.errorcode";
option go_package = "github.com/actliboy/hoper/server/go/lib/protobuf/errorcode";



message ErrRep {
    ErrCode code = 1 [(go.field) = {tags:'json:"code"'}];
    string message = 2;
}